Airsync and UPE more cleanup